# convert-cash-solver

./: .gitignore  convert_pubkey.js  docker-compose.yaml  nodemon.json  package-lock.json  package.json  tsconfig.json
contracts/mock_ft/: Cargo.toml
contracts/proxy/: Cargo.toml  README.md  SANDBOX_SETUP_COMPLETE.md  TESTING.md  test.sh  test_local_repro.sh
contracts/proxy/scripts/: README.md  set_kernel_params.sh  set_kernel_params_permanent.sh
contracts/proxy/src/: chainsig.rs  intents.rs  lender.rs  lib.rs  near_intents.rs  solvers.rs  test_utils.rs  upgrade.rs  vault.rs  withdraw.rs
contracts/proxy/src/vault_standards/: core.rs  events.rs  internal.rs  mod.rs  mul_div.rs  rounding.rs
contracts/proxy/tests/: README.md  sandbox_test.rs  test_borrow_with_redemption.rs  test_complex_multi_lender_scenario.rs  test_fifo_redemption_queue.rs  test_half_redemptions.rs  test_l1_multiple_deposits_borrows_redemption.rs  test_lender_profit.rs  test_lender_redemption_queue.rs  test_multi_lender_queue.rs  test_multi_lender_redemption_queue.rs  test_multi_solver.rs  test_new_intent.rs  test_partial_redemption_with_borrow.rs  test_partial_repayment.rs  test_rounding_nep621.rs  test_single_lender_queue.rs  test_solver_borrow.rs  test_solver_borrow_empty_pool.rs  test_solver_borrow_exact_pool.rs  test_solver_borrow_exceeds_pool.rs  test_update_deposit_info.rs  test_vault_deposit.rs  test_withdrawals.rs
contracts/proxy/tests/helpers/: mod.rs  test_builder.rs
contracts/sandbox/: Cargo.toml
scripts/: generate_random_key.js  get_pubkeys.js  test-quote-selection.js  user-quote.js
src/: app.js  app.ts  bitfinex.js  cron.js  erc191.js  erc191Key.js  evm.js  intents.js  kdf.js  near.js  tron.js
src/bus/: accessPoint.ts  main.ts  nearClient.js  nearClient.ts  nearIntentsClient.ts  quoteGenerator.ts  types.ts
src/cex/: BINANCE_INTEGRATION.md  binance.ts  bitfinex.ts  intentsBridge.ts  intentsIntent.ts
src/contract/: ContractService.ts  index.ts  types.ts
src/cron/: cron.ts
src/deprecated/: app.js  evm.js  intents.js  near.js  tron.js
src/key/: erc191.ts
src/solver/: SolverService.ts  index.ts  types.ts
types/: global.d.ts  shade-agent-js.d.ts
