[package]
name = "contract"
description = "Simple Pay to Sign"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NearDeFi/convert-cash-solver"

[package.metadata.near]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.15.0-rust-1.86.0"
image_digest = "sha256:aad208b09976f643b56104cc6af87fbb03afadff2e76f9e5e3fa283969e15f8b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[package.metadata.near.reproducible_build.variant.force_bulk_memory]
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2", features = ["schemars"]}
schemars = { version = "0.8" }
serde_json = "1.0.135"
base64 = "0.22.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
serde = "1.0.217"
near-contract-standards = "5.17.2"
borsh = "1.5.7"
uint = "0.10.0"

[dev-dependencies]
near-sdk = { version = "5.17.2", features = ["unit-testing"] }
near-sandbox = "0.2.1"
tokio = { version = "1", features = ["full"] }
near-api = "0.6.1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
