[package]
name = "sandbox-contract"
description = "NEAR Intents Sandbox Contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
dcap-qvl = { git = "https://github.com/mattlockyer/dcap-qvl" }
sha2 = { workspace = true }
serde = { workspace = true }

# rustls-webpki = {git = "https://github.com/mattlockyer/webpki", default-features = false, features=[
#    "near-wasm",
# ]}

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

# Profile settings are now defined in workspace Cargo.toml